2020-08-02  Rob Savoye  <rob@senecass.com>

	* Makefile.in: Regenerate so make dist works.

2020-07-25  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	* doc/dejagnu.texi (Writing a test case): Mention the DejaGnu
	procedure "perror" instead of the Tcl command "error".
	(Writing a test case): Reorganize node and give basic hints about
	Tcl quoting and backslash escape rules.
	(Writing a test case): Describe synchronization issues and warn
	that prefixes of valid input can be presented for matching.
	(Writing a test case): Fix markup from conversion from DocBook.

2020-07-22  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	PR42399

	* NEWS: Document changes to host_execute.

	* lib/dejagnu.exp (host_execute): Revise expect matching to
	combine all unit test protocol lines into one pattern.
	(host_execute): Rework other expect patterns.
	(host_execute): Ensure that all output from child process is read
	until the child closes its output to avoid sending early SIGPIPE.
	(host_execute): Report an ERROR (and cause the next test to be
	recorded as UNRESOLVED) if the Expect matching buffer overflows.
	(host_execute): Remove dependency on global "text" variable.

	* Makefile.am (TESTSUITE_FILES): Update.

	* testsuite/runtest.main/stats.exp: Generalize infrastructure and
	add tests for DejaGnu unit testing support.
	* testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.exp:
	New file.
	* testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.awk:
	New file.

2020-07-20  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	PR42399

	* Makefile.am (TESTSUITE_FILES): Update.

	* lib/dejagnu.exp (host_execute): Allow the executable to be
	specified with an absolute file name.
	(host_execute): Fix argument handling to allow passing more than
	one argument to the executable.  Return early if given no
	arguments at all instead of trying to execute "./".

	* testsuite/runtest.main/pr42399.exp: New file.
	* testsuite/runtest.main/nested/testsuite/bug.test/pr42399.awk:
	New file.